Adding test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-request.time.limit=60
-request.count.limit=10
-ratelimiter.bucket.size=60
+request.time.limit.inseconds=30
+request.count.limit=5
+time.window.count=5
