--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+#Overall time window (in seconds) to apply rate limit
 request.time.limit.inseconds=30
+#Overall request count allowed in the time window
 request.count.limit=5
+#Number of smaller time window buckets that the program will use
 time.window.count=5
+#UserID attribute name in the HTTP header
+header.userid.attribute.name=userid
